feat: 섹션 1 완료 / ts-check 문제 있음

--- a/why-ts/index.html
+++ b/why-ts/index.html
@@ -15,5 +15,8 @@
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="./app.js"></script>
+    <script src="./sample.js"></script>
+    <!-- <script src="./sample2.ts"></script> -->
+    <!-- <script src="./sample.ts"></script> -->
   </body>
 </html>
